get estimated trip time

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -15,4 +15,8 @@
         Where are you going?
         <ion-icon name="search"></ion-icon>
     </button>
+
+    <button secondary (click)="runTripQuery()">
+        Find me things to read
+    </button>
 </ion-content>
