navigate to articles page after getting travel information; bug fix

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -27,7 +27,7 @@
             </button>
 
             <button outline *ngIf="endStation"
-                (click)="openModal('start')">
+                (click)="openModal('end')">
                 {{ endStation.Name }}
                 <ion-icon name="create"></ion-icon>
             </button>
