--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Read N Ride</ion-title>
+    <ion-buttons end *ngIf="startStation && endStation">
+      <button (click)="clearInputs()">
+        Clear
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
