--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar primary>
     <ion-title>Read N Ride</ion-title>
     <ion-buttons end *ngIf="startStation && endStation">
       <button (click)="clearInputs()">
