add loading indicators; css cleanup and make header buttons legible

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -2,7 +2,7 @@
   <ion-navbar primary>
     <ion-title>Read N Ride</ion-title>
     <ion-buttons end *ngIf="startStation && endStation">
-      <button (click)="clearInputs()">
+      <button light (click)="clearInputs()">
         Clear
       </button>
     </ion-buttons>
